# bREDcrumb

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml
docs/: app.js  index.html  serve.py  style.css
src/: lib.rs  main.rs  wasm.rs
src/cli/: commands.rs
src/codegen/: c_cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  mod.rs  powershell.rs  python.rs  rust.rs
src/generator/: mod.rs
src/patcher/: cave.rs  elf.rs  macho.rs  mod.rs  pe.rs
src/storage/: mod.rs  models.rs
src/yara/: mod.rs
